and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).


## [2.4.0] - Unreleased
### Changed
- [IDP] [API] Return a generic 400 when the requested portal/repo/user doesn't exist
### Removed
- [FILES] Obsolete files (owned and used on vulture-base)
- [HAPROXY] [CONFIG] Obsolete Frontend defender policy SPOE


## [2.3.0] - 2023-02-02
### Fixed
- [HAPROXY] [PORTAL] redirect request to portal whenever authentication validation couldn't be done
- [IDP] [API] Correct return code 400 when User without TOTP has a request for TOTP reset
- [SYSTEM] [BLACKLIST/WHITELIST] Reload pf configuration when adding/removing whitelist/blacklist IPs to cluster 
- [API_PARSER] [CLOUDFLARE] Fix ram explosion + improve resilience by downloading by bulks
- [API_PARSER] [AKAMAI] Fix HBSD13 SemLock error when loading GUI code
### Added
- [IDP] [API] When locking/unlocking a user, also disable/enable its access tokens
- [API_PARSER] [WAF_CLOUD_PTORECTOR] New API parser WAF Cloud Protector
### Changed
- [HAPROXY] [PORTAL] Deny requests with Authorization header, instead of redirecting them to the portal


## [2.2.4] - 2023-01-18
### Fixed
- [API_PARSER] [IMPERVA] Prevent downloading same files
- [CRONTABS] [SECURITY_UPDATE] Script could fail to save new Geolite MMDBs due to filename inconsistency in DB
### Changed
- [RSYSLOG] [PSTATS-SEC] Disable rsyslog stat generation every second
- [API_PARSER] [AKAMAI] Improve parser's performances
- [API_PARSER] [PROOFPOINT_TRAP] Add treatment delay of 15 minutes to have the alerts after their update
- [API_PARSER] [PROOFPOINT_TRAP] Get more incident information, including incident severity


## [2.2.3] - 2023-01-04
### Fixed
- [API_PARSER] [NETSKOPE] last_api_call was not correctly updated + prevent stagnation
### Removed
- [API_PARSER] [PROOFPOINT_TRAP] Removed filtering on 'open' alerts


## [2.2.2] - 2022-12-21
### Fixed