@@ -1,25 +1,0 @@
-#This file is part of Vulture OS.
-#
-
-########################## WARNING ###############################
-# Don't edit this file, it is automatically generated by Vulture #
-########################## WARNING ###############################
-
-frontend portals-proxy
-    bind unix@/var/sockets/haproxy/portals.sock
-    mode http
-    default_backend cluster-portal-servers
-
-backend cluster-portal-servers
-    mode http
-    option tcp-check
-    # Tells Haproxy to cleanly terminate each TCP connection during healthchecking
-    # Avoid hanging connections for some services (noticed on gunicorn)
-    tcp-check connect linger
-
-    # Load-Balance between cluster nodes
-    server srv-portal_{{ my_node.name }} portal:9000 ssl crt /var/db/pki/node.pem ca-file /var/db/pki/ca.pem check inter 5s
-    {% for node in other_nodes %}
-    server srv-portal_{{ node.name }} {{node.name}}:9000 ssl crt {{node.get_certificate().bundle_filename}} ca-file /var/db/pki/ca.pem check inter 5s
-    {% endfor %}
-
