@@ -11,6 +11,8 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 ### Removed
 - [FILES] Obsolete files (owned and used on vulture-base)
 - [HAPROXY] [CONFIG] Obsolete Frontend defender policy SPOE
+### Added
+- [HAPROXY] [CONFIG] Added Redis main node proxying
 
 
 ## [2.3.0] - 2023-02-02
